# breakAgent

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  TODOS.md  pyproject.toml
breakagent/: agent.py  cli.py  main.py  models.py  orchestrator.py  parser.py  report.py  scoring.py  summary.py  verify.py
breakagent/modules/: __init__.py  base.py  quality.py  robustness.py  security.py
breakagent/planners/: __init__.py  llm.py  rule.py
tests/: test_cli.py  test_llm_planner.py  test_modules.py  test_orchestrator.py  test_parser.py  test_planner.py  test_quality_yaml.py  test_report.py  test_scoring.py  test_summary.py  test_verify.py
